--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   auto_route: ^7.8.4
   build_runner: ^2.4.7
   auto_route_generator: ^7.3.2
+  flutter_screenutil: ^5.9.0
+  svg_flutter: ^0.0.1
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
